--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,16 @@
 .container {
-  background: white;
+  background: gray;
+
 }
 
-#logo {
-  font-size: 30px;
-}
-
-#logo-img, #logo {
+ #logo {
+  font-size: 50px;
   vertical-align: middle;
-  background-color: green;
+  background-color: grey;
+  font-family: cursive;
 }
+
+
 
 .form {
   display: inline-block;
@@ -17,16 +18,17 @@
 
 
 body {
-  background-image: "img\slider-revolution-3-bg.jp";
+  background-color: black;
 }
 
 h1 {
-  color: black;
+  color: green;
   text-align: center;
+  font-family: cursive;
 }
 
 p {
-  font-family: verdana;
+  font-family: cursive;
   font-size: 20px;
 }
 
@@ -35,13 +37,9 @@ p {
   margin: 0 auto;
 }
 
-.navbar {
-  background-color: green !important;
-  text-align: center !important;
-}
 
 .navbar {
-  border:1px solid #000 ;
+  border:1px solid #0000 ;
   border-bottom: 1px solid #000;
 
 
@@ -52,9 +50,42 @@ p {
 }
 
 #logo-img {
-  background-color: green
+  background-color: #0000;
 }
 
 .form-group {
+  margin: 100;
+  padding: 100;
   text-align: middle;
+  background-color: gray;
+  font-family: cursive;
+}
+
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: black;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: gray;
+    text-align: center;
+    padding: 18px 20px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: gray;
+}
+
+.active {
+    background-color: green;
 }
